--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+analyzer:
+  exclude:
+    - build/**
+    - .dart_tool/**
+    - ios/Pods/**
+    - android/**/build/**
+    - lib/generated/**
+
